--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -53,13 +53,14 @@ to make innovations with my talented skills.
 \subsubsection*{Hand On Experience}
 
 \begin{itemize}
- \item Python
- \item Django
- \item Django Rest Framework
- \item RESTful Web Services
- \item GIT
- \item VIM
- \item Ubuntu
+ \item \textbf{Python} \\
+ Familiar with Data Structures, Control Flow, Classes, Exceptions and Modular Programming in Python.
+ \item \textbf{Django}
+ \item \textbf{Django Rest Framework}
+ \item \textbf{RESTful Web Services}
+ \item \textbf{GIT}
+ \item \textbf{VIM}
+ \item \textbf{Ubuntu}
 \end{itemize}
 
 \subsubsection*{Knowledge Of}
