quick completion of resume.

--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -18,10 +18,10 @@
  \\[0.1cm]
 
 \textit{\large Python/Django Developer} \\
-\addvspace{0.04cm} 
+\addvspace{0.04cm}
 \rule[0.07cm]{17.52cm}{0.01cm}
 \begin{tabular}{l c l}
-Organization      &:& Finoit Technologies Pvt. Ltd. Noida \\ 
+Organization      &:& Finoit Technologies Pvt. Ltd. Noida \\
 Department        &:& Web Development [ Backend ] \\
 Email ID          &:& anoop.k.malav@gmail.com \\
 Contact No.       &:& +91-9971919916 \\
@@ -52,15 +52,14 @@ to make innovations with my talented skills.
 
 \subsubsection*{Hand On Experience}
 
-\begin{itemize}
- \item Python
- \item Django
- \item Django Rest Framework
- \item RESTful Web Services
- \item GIT
- \item VIM
- \item Ubuntu
-\end{itemize}
+\begin{tabular}{l l l l l l}
+ $\circ$ Python &
+ $\circ$ Django &
+ $\circ$ Django Rest Framework &
+ $\circ$ GIT &
+ $\circ$ Vim &
+ $\circ$ Ubuntu \\
+\end{tabular}
 
 \subsubsection*{Knowledge Of}
 
@@ -179,8 +178,8 @@ my knowledge and I bear the responsibility for the credibility of the particular
  Anoop Kumar Malav
 \end{flushright}
 \begin{center}
- 
-Last Updated : \today 
+
+Last Updated : \today
 
 \end{center}
 
