--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -44,7 +44,7 @@ to make innovations with my talented skills.
  \item Prefer playing with the code in shell, before writing it in the module.
  \item Mostly prefer quality over quantity. Good quality reduces maintenance cost, and increases productivity. In case of urgency of task completion, may compromise with quality for short period of time, but later its taken care of.
  \item Prefer to work based on DRY principle, i.e. writing mixins and utils and plugging these directly instead of writing repetitive code.
- \item Enjoy working on Linux Server, GIT as Source Code Management Tool and Vim as Text-Editor.
+ \item Enjoy working on Linux Machines, GIT as Source Code Management Tool and Vim as Text-Editor.
 \end{itemize}
 
 
@@ -56,6 +56,7 @@ to make innovations with my talented skills.
  \item \textbf{Python} \\
  Familiar with Data Structures, Control Flow, Classes, Exceptions and Modular Programming in Python.
  \item \textbf{Django}
+ Familiar with Models, querysets, 
  \item \textbf{Django Rest Framework}
  \item \textbf{RESTful Web Services}
  \item \textbf{GIT}
