--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
 \usepackage{multicol}
 \usepackage{verbatim}
 \usepackage{amssymb}
@@ -22,7 +22,7 @@
 \rule[0.07cm]{17.52cm}{0.01cm}
 \begin{tabular}{l c l}
 Organization      &:& Finoit Technologies Pvt. Ltd. Noida \\
-Department        &:& Web Development [ Backend ] \\
+Department        &:& Web Development \\
 Email ID          &:& anoop.k.malav@gmail.com \\
 Contact No.       &:& +91-9971919916 \\
 \end{tabular}
@@ -39,16 +39,23 @@ to make innovations with my talented skills.
 
 \begin{itemize}
  \item Significant experience with Django and Django REST Framework.
+ \item Developed Reusable Components for Django and Django REST Framework.
+ \item Awarded Certificate Of Excellence from Finoit Technologies for year 2014.
+ \item First Finoit Member to start using GIT for Source Code Management.
+ \item Provided Training to Team Members of Linux, GIT, Python, Django, REST.
+ \item Always appreciated by Team Manager for Project Quality, Documention and Fast Delivery.
+     \begin{comment}
  \item Always follow best practices, write well formatted and documented code.
  \item Prefer to deliver documentation along with product. Work hard to meet the deadlines.
  \item Prefer playing with the code in shell, before writing it in the module.
  \item Mostly prefer quality over quantity. Good quality reduces maintenance cost, and increases productivity. In case of urgency of task completion, may compromise with quality for short period of time, but later its taken care of.
  \item Prefer to work based on DRY principle, i.e. writing mixins and utils and plugging these directly instead of writing repetitive code.
  \item Enjoy working on Linux Server, GIT as Source Code Management Tool and Vim as Text-Editor.
+     \end{comment}
 \end{itemize}
 
 
-\section*{Work Experience}
+\section*{Technical Skills}
 
 \subsubsection*{Hand On Experience}
 
@@ -80,19 +87,22 @@ to make innovations with my talented skills.
  $\circ$ HTML &
  $\circ$ Continuous Integration &
  $\circ$ Github / GitLab / Gitolite \\
+ % Markdown
 \end{tabular}
 
 \subsubsection*{Little Experience With}
 
-\begin{tabular}{l l l l}
+\begin{tabular}{l l l l l l}
  $\circ$ MySQL &
+ $\circ$ PostgreSQL &
  $\circ$ Shell Script &
+ $\circ$ XMPP &
  $\circ$ JSP &
- $\circ$ Prolog \\
- $\circ$ Socket &
- $\circ$ WAMP Server &
- $\circ$ LDAP &
- $\circ$ SCRUM Development \\
+% $\circ$ Prolog \\
+% $\circ$ Socket &
+ $\circ$ WAMP Server \\
+% $\circ$ LDAP \\
+% $\circ$ SCRUM Development \\
 \end{tabular}
 
 \begin{comment}
@@ -156,7 +166,32 @@ to specified destination on a specified date.
 \end{itemize}
 \end{comment}
 
+\section*{Work Experience [Finoit, Aug 2012 to Present]}
+\begin{itemize}
+ \item \textbf{NOC (Network Operations Center)}
+    \\ Manage Network Devices, GIS Inventory and Device Services Status.
+    \\ Track performance of devices. Raise alarms for bad status of device services.
+    \\ \textit{Technology Used : Python2.7, Django-1.6, MySQL, South, Django-MPTT, Celery, jQuery, Highcharts, Datatables.}
+ \item \textbf{UPVGO (e-learning platform)}
+    \\ Students can play apps and complete assignments.
+    \\ Teachers and parents can assign assignments, track performance of students.
+    \\ \textit{Technology used : Python2.7, Django1.6, Django-Rest-Framework, MySQL, OAuth2.}
+ \item \textbf{EMEND (e-learning app for CAT preparations)}
+    \\ Manage CAT Practice Questions. Integration with UPVGO. APIs for GamePlay and Reports.
+    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL.}
+ \item \textbf{Budgle (Expense Tracker)}
+    \\ Track expenses and share with friends.
+    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, OAuth2.}
+ \item \textbf{Workflow (Office Management System)}
+    \\ Manage employees, Leaves, Attendance and Time-Sheet. Manage testing devices i.e. Mobile, tablet.
+    \\ \textit{Technology used : Python2.7, Django1.4, Django-Rest-Framework, MySQL, LDAP.}
+ \item \textbf{Blink Autos (Auto-rickshaw Booking System)}
+    \\ Allow booking of nearest available auto-rickshaw Or Schedule a Trip.
+    \\ \textit{Technology used : Python2.7, Django1.6, Django-Rest-Framework, PostgreSQL, Celery.}
+\end{itemize}
 
+
+\begin{comment}
 \section*{Educational Qualification}
 \begin{tabular}{l l c c}
 \textbf{Degree} & \textbf{University / Institute} & \textbf{\% Marks} & \textbf{Year}\\[0.2cm]
@@ -170,6 +205,7 @@ Senior Secondary Examination & Maa Bharati Vidhya Bhavan, Kota & 84.92 & 2007\\[
 Secondary School Examination & Vivek Vardhani Secondary School, Anta  & 86.67 & 2005\\
  & & & \\
 \end{tabular}
+\end{comment}
 
 \section*{Declaration}
 I hereby declare that the above mentioned information is correct up to
