--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -168,6 +168,15 @@ to specified destination on a specified date.
 
 \section*{Work Experience [Finoit, Aug 2012 to Present]}
 \begin{itemize}
+ \item \textbf{Veris (Visitor Management System)}
+    \\ Facilitates the users to setup meetings and relay information to the Visitor Management System for Check-ins, all in a completely secured and hassle free environment.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Django-MPTT, Django-storages, libphonenumbers.}
+ \item \textbf{Triplinks (Social Network for lone business travellers)}
+    \\ TripLinks connects lone travellers with other travellers and locals. Share dinner, a coffee or a run after a work.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Datatables.}
+ \item \textbf{SplitKart (Payment Split System)}
+    \\ Get restaurant deals, plan outing and split bills among friends, family and colleagues.
+    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, Datatables.}
  \item \textbf{NOC (Network Operations Center)}
     \\ Manage Network Devices, GIS Inventory and Device Services Status.
     \\ Track performance of devices. Raise alarms for bad status of device services.
@@ -185,9 +194,6 @@ to specified destination on a specified date.
  \item \textbf{Workflow (Office Management System)}
     \\ Manage employees, Leaves, Attendance and Time-Sheet. Manage testing devices i.e. Mobile, tablet.
     \\ \textit{Technology used : Python2.7, Django1.4, Django-Rest-Framework, MySQL, LDAP.}
- \item \textbf{Blink Autos (Auto-rickshaw Booking System)}
-    \\ Allow booking of nearest available auto-rickshaw Or Schedule a Trip.
-    \\ \textit{Technology used : Python2.7, Django1.6, Django-Rest-Framework, PostgreSQL, Celery.}
 \end{itemize}
 
 
