--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -41,9 +41,10 @@ to make innovations with my talented skills.
  \item Significant experience with Django and Django REST Framework.
  \item Developed Reusable Components for Django and Django REST Framework.
  \item Awarded Certificate Of Excellence from Finoit Technologies for year 2014.
+ \item Awarded Certificate Of Star Performer from Finoit Technologies for year 2015.
  \item First Finoit Member to start using GIT for Source Code Management.
  \item Provided Training to Team Members of Linux, GIT, Python, Django, REST.
- \item Always appreciated by Team Manager for Project Quality, Documention and Fast Delivery.
+ \item Always appreciated by Project Manager for Project Quality, Documention and Fast Delivery.
      \begin{comment}
  \item Always follow best practices, write well formatted and documented code.
  \item Prefer to deliver documentation along with product. Work hard to meet the deadlines.
@@ -57,7 +58,7 @@ to make innovations with my talented skills.
 
 \section*{Technical Skills}
 
-\subsubsection*{Hand On Experience}
+%\subsubsection*{Hand On Experience}
 
 \begin{tabular}{l l l l l l}
  $\circ$ Python &
@@ -68,14 +69,9 @@ to make innovations with my talented skills.
  $\circ$ Ubuntu \\
 \end{tabular}
 
-\subsubsection*{Knowledge Of}
 
 \begin{tabular}{l l l l}
- $\circ$ C &
  $\circ$ JavaScript &
- $\circ$ \LaTeX{} &
- $\circ$ Google Cloud Engine \\
- $\circ$ Java &
  $\circ$ JQuery &
  $\circ$ Amazon Web Services &
  $\circ$ OAuth2 \\
@@ -87,84 +83,12 @@ to make innovations with my talented skills.
  $\circ$ HTML &
  $\circ$ Continuous Integration &
  $\circ$ Github / GitLab / Gitolite \\
- % Markdown
-\end{tabular}
-
-\subsubsection*{Little Experience With}
-
-\begin{tabular}{l l l l l l}
  $\circ$ MySQL &
  $\circ$ PostgreSQL &
  $\circ$ Shell Script &
- $\circ$ XMPP &
- $\circ$ JSP &
-% $\circ$ Prolog \\
-% $\circ$ Socket &
- $\circ$ WAMP Server \\
-% $\circ$ LDAP \\
-% $\circ$ SCRUM Development \\
+ $\circ$ XMPP \\
+ % Markdown
 \end{tabular}
-
-\begin{comment}
-\section*{Interested In}
-
-\begin{itemize}
- \item Security
- \item Automated testing \& Test-Driven Development
- \item Core Python and Linux Tasks
- \item Server Management (Deployment of large scale web application)
- \item Technologies such as Redis \& MongoDB
- \item RESTful Web Services
-\end{itemize}
-
-\section*{Area of Interest}
-%\begin{center}
-
-\begin{tabular}{l l l}
-
-$\bullet$  Computer Programming &
-$\bullet$  Data Structures and Algorithms &
-$\bullet$  Operating Systems \\
-$\bullet$  Computer Networks &
-$\bullet$  Computer Vision and Pattern Recognition & \\
-\end{tabular}
-%\end{center}
-
-\section*{Technical Proficiency}
-\begin{tabular}{l c l}
-Programming & : & C, Java, Prolog \\
-Web Development & : & HTML, CSS, PHP, JavaScript, MySQL, GIMP \\
-Operating System & : & GNU/Linux, Windows \\
-Others & : & \LaTeX{} , OpenCV(Image Processing), System Programming under Linux, Unix Shell \\
-\end{tabular}
-
-\section*{Projects}
-\begin{itemize}
- \item \textbf{Colored CCA (Connected Component Analysis)}
- \\ \textit{Technology Used : OpenCV (Image Processing)}
- \item \textbf{Minesweeper}
- \\ Java based mines game applet.
- \item \textbf{LAN Radio Server}
-\\ Real-Time Sound streaming with different channels on LAN.
-\\ \textit{Technology used : Socket Programming in JAVA}
- \item \textbf{Digital Music Server}
-\\ A common DMS for all users on LAN.
-\\ \textit{Technology used : Socket Programming in JAVA, MyID3: a Java ID3 Tag Library.}
- \item \textbf{PDF Digger}
-\\ Scans the given set of research papers(PDF) and predicts the person’s research interest.
-\\ \textit{Technologies Used: Java, IText Library}
- \item \textbf{MP3 Manager}
-\\ Scans the given collection of songs and predicts the genre in which user
-mostly interested in and also manage the collection of songs by  re-arranging them
-in hierarchy of $Year \rightarrow Album \rightarrow Song.$
-\\ \textit{Technologies Used: Java, ID3 Library}
- \item \textbf{Route Planner / Airline Scheduler}
- \\Finds all possible flights from specified source
-to specified destination on a specified date.
-\\ \textit{Technology Used : Prolog}
-
-\end{itemize}
-\end{comment}
 
 \section*{Work Experience [Finoit, Aug 2012 to Present]}
 \begin{itemize}
