--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -1,7 +1,8 @@
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
 \usepackage{multicol}
 \usepackage{verbatim}
 \usepackage{amssymb}
+\usepackage[hidelinks]{hyperref}
 \usepackage[top=1cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 %\setlength{\topmargin}{0in}
 %\setlength{\headheight}{0in}
@@ -12,8 +13,8 @@
  %\input{./title.tex}
 \begin{center}
 
-\textsc{\huge \textit{Curriculum Vitae}}
-\\[0.5cm]
+%\textsc{\huge \textit{Curriculum Vitae}}
+%\\[0.5cm]
 \textsc{\Large Anoop Kumar Malav}
  \\[0.1cm]
 
@@ -22,9 +23,10 @@
 \rule[0.07cm]{17.52cm}{0.01cm}
 \begin{tabular}{l c l}
 Organization      &:& Finoit Technologies Pvt. Ltd. Noida \\
-Department        &:& Web Development \\
+Department        &:& Web Development [4 Years experience]\\
 Email ID          &:& anoop.k.malav@gmail.com \\
 Contact No.       &:& +91-9971919916 \\
+Website           &:& \href{http://anoopmalav.com}{http://anoopmalav.com}
 \end{tabular}
 
 \addvspace{0.02cm}
@@ -35,29 +37,21 @@ Contact No.       &:& +91-9971919916 \\
 Accelerate my pace towards the growth of the organization by riding on my strength and
 to make innovations with my talented skills.
 
-\section*{Summary of Qualifications}
+\section*{Achivements}
 
 \begin{itemize}
  \item Significant experience with Django and Django REST Framework.
  \item Developed Reusable Components for Django and Django REST Framework.
+ \item Selected for GSOC 2012.
  \item Awarded Certificate Of Excellence from Finoit Technologies for year 2014.
+ \item Awarded Certificate Of Star Performer from Finoit Technologies for year 2015.
  \item First Finoit Member to start using GIT for Source Code Management.
  \item Provided Training to Team Members of Linux, GIT, Python, Django, REST.
  \item Always appreciated by Team Manager for Project Quality, Documention and Fast Delivery.
-     \begin{comment}
- \item Always follow best practices, write well formatted and documented code.
- \item Prefer to deliver documentation along with product. Work hard to meet the deadlines.
- \item Prefer playing with the code in shell, before writing it in the module.
- \item Mostly prefer quality over quantity. Good quality reduces maintenance cost, and increases productivity. In case of urgency of task completion, may compromise with quality for short period of time, but later its taken care of.
- \item Prefer to work based on DRY principle, i.e. writing mixins and utils and plugging these directly instead of writing repetitive code.
- \item Enjoy working on Linux Server, GIT as Source Code Management Tool and Vim as Text-Editor.
-     \end{comment}
 \end{itemize}
 
 
 \section*{Technical Skills}
-
-\subsubsection*{Hand On Experience}
 
 \begin{tabular}{l l l l l l}
  $\circ$ Python &
@@ -67,8 +61,6 @@ to make innovations with my talented skills.
  $\circ$ Vim &
  $\circ$ Ubuntu \\
 \end{tabular}
-
-\subsubsection*{Knowledge Of}
 
 \begin{tabular}{l l l l}
  $\circ$ C &
@@ -87,84 +79,11 @@ to make innovations with my talented skills.
  $\circ$ HTML &
  $\circ$ Continuous Integration &
  $\circ$ Github / GitLab / Gitolite \\
- % Markdown
-\end{tabular}
-
-\subsubsection*{Little Experience With}
-
-\begin{tabular}{l l l l l l}
  $\circ$ MySQL &
  $\circ$ PostgreSQL &
  $\circ$ Shell Script &
- $\circ$ XMPP &
- $\circ$ JSP &
-% $\circ$ Prolog \\
-% $\circ$ Socket &
- $\circ$ WAMP Server \\
-% $\circ$ LDAP \\
-% $\circ$ SCRUM Development \\
+ $\circ$ XMPP \\
 \end{tabular}
-
-\begin{comment}
-\section*{Interested In}
-
-\begin{itemize}
- \item Security
- \item Automated testing \& Test-Driven Development
- \item Core Python and Linux Tasks
- \item Server Management (Deployment of large scale web application)
- \item Technologies such as Redis \& MongoDB
- \item RESTful Web Services
-\end{itemize}
-
-\section*{Area of Interest}
-%\begin{center}
-
-\begin{tabular}{l l l}
-
-$\bullet$  Computer Programming &
-$\bullet$  Data Structures and Algorithms &
-$\bullet$  Operating Systems \\
-$\bullet$  Computer Networks &
-$\bullet$  Computer Vision and Pattern Recognition & \\
-\end{tabular}
-%\end{center}
-
-\section*{Technical Proficiency}
-\begin{tabular}{l c l}
-Programming & : & C, Java, Prolog \\
-Web Development & : & HTML, CSS, PHP, JavaScript, MySQL, GIMP \\
-Operating System & : & GNU/Linux, Windows \\
-Others & : & \LaTeX{} , OpenCV(Image Processing), System Programming under Linux, Unix Shell \\
-\end{tabular}
-
-\section*{Projects}
-\begin{itemize}
- \item \textbf{Colored CCA (Connected Component Analysis)}
- \\ \textit{Technology Used : OpenCV (Image Processing)}
- \item \textbf{Minesweeper}
- \\ Java based mines game applet.
- \item \textbf{LAN Radio Server}
-\\ Real-Time Sound streaming with different channels on LAN.
-\\ \textit{Technology used : Socket Programming in JAVA}
- \item \textbf{Digital Music Server}
-\\ A common DMS for all users on LAN.
-\\ \textit{Technology used : Socket Programming in JAVA, MyID3: a Java ID3 Tag Library.}
- \item \textbf{PDF Digger}
-\\ Scans the given set of research papers(PDF) and predicts the person’s research interest.
-\\ \textit{Technologies Used: Java, IText Library}
- \item \textbf{MP3 Manager}
-\\ Scans the given collection of songs and predicts the genre in which user
-mostly interested in and also manage the collection of songs by  re-arranging them
-in hierarchy of $Year \rightarrow Album \rightarrow Song.$
-\\ \textit{Technologies Used: Java, ID3 Library}
- \item \textbf{Route Planner / Airline Scheduler}
- \\Finds all possible flights from specified source
-to specified destination on a specified date.
-\\ \textit{Technology Used : Prolog}
-
-\end{itemize}
-\end{comment}
 
 \section*{Work Experience [Finoit, Aug 2012 to Present]}
 \begin{itemize}
@@ -196,22 +115,6 @@ to specified destination on a specified date.
     \\ \textit{Technology used : Python2.7, Django1.4, Django-Rest-Framework, MySQL, LDAP.}
 \end{itemize}
 
-
-\begin{comment}
-\section*{Educational Qualification}
-\begin{tabular}{l l c c}
-\textbf{Degree} & \textbf{University / Institute} & \textbf{\% Marks} & \textbf{Year}\\[0.2cm]
-%& & & \\
-B.Tech. & The LNM Institute of Information Technology, Jaipur  & 55.60 & 2012\\[0.2cm]
- %      &  &    &   \\
-%& & & \\
-Senior Secondary Examination & Maa Bharati Vidhya Bhavan, Kota & 84.92 & 2007\\[0.2cm]
-% & & & \\
-%& & & \\
-Secondary School Examination & Vivek Vardhani Secondary School, Anta  & 86.67 & 2005\\
- & & & \\
-\end{tabular}
-\end{comment}
 
 \section*{Declaration}
 I hereby declare that the above mentioned information is correct up to
