--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -23,10 +23,10 @@
 \rule[0.07cm]{17.52cm}{0.01cm}
 \begin{tabular}{l c l}
 Organization      &:& Finoit Technologies Pvt. Ltd. Noida \\
-Department        &:& Web Development [4 Years experience]\\
+Department        &:& Web Development [4 Years]\\
 Email ID          &:& anoop.k.malav@gmail.com \\
 Contact No.       &:& +91-9971919916 \\
-Website           &:& \href{http://anoopmalav.com}{http://anoopmalav.com}
+%Website           &:& \href{http://anoopmalav.com}{http://anoopmalav.com}
 \end{tabular}
 
 \addvspace{0.02cm}
@@ -42,12 +42,12 @@ to make innovations with my talented skills.
 \begin{itemize}
  \item Significant experience with Django and Django REST Framework.
  \item Developed Reusable Components for Django and Django REST Framework.
- \item Selected for GSOC 2012.
+% \item Selected for GSOC 2012.
  \item Awarded Certificate Of Excellence from Finoit Technologies for year 2014.
  \item Awarded Certificate Of Star Performer from Finoit Technologies for year 2015.
  \item First Finoit Member to start using GIT for Source Code Management.
  \item Provided Training to Team Members of Linux, GIT, Python, Django, REST.
- \item Always appreciated by Team Manager for Project Quality, Documention and Fast Delivery.
+% \item Always appreciated by Team Manager for Project Quality, Documention and Fast Delivery.
 \end{itemize}
 
 
@@ -58,41 +58,36 @@ to make innovations with my talented skills.
  $\circ$ Django &
  $\circ$ Django Rest Framework &
  $\circ$ GIT &
- $\circ$ Vim &
  $\circ$ Ubuntu \\
-\end{tabular}
-
-\begin{tabular}{l l l l}
- $\circ$ C &
+ $\circ$ PostgreSQL &
+ $\circ$ MySQL &
+ $\circ$ Shell Script &
+ $\circ$ OAuth2 &
+ $\circ$ Github / GitLab \\
+ $\circ$ HTML &
  $\circ$ JavaScript &
- $\circ$ \LaTeX{} &
- $\circ$ Google Cloud Engine \\
- $\circ$ Java &
  $\circ$ JQuery &
  $\circ$ Amazon Web Services &
- $\circ$ OAuth2 \\
- $\circ$ Nginx &
- $\circ$ Apache &
- $\circ$ Gunicorn &
- $\circ$ Supervisor: A Process Control System \\
- $\circ$ Ajax &
- $\circ$ HTML &
- $\circ$ Continuous Integration &
- $\circ$ Github / GitLab / Gitolite \\
- $\circ$ MySQL &
- $\circ$ PostgreSQL &
- $\circ$ Shell Script &
- $\circ$ XMPP \\
+ $\circ$ Nginx \\
 \end{tabular}
 
 \section*{Work Experience [Finoit, Aug 2012 to Present]}
 \begin{itemize}
- \item \textbf{Veris (Visitor Management System)}
-    \\ Facilitates the users to setup meetings and relay information to the Visitor Management System for Check-ins, all in a completely secured and hassle free environment.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Django-MPTT, Django-storages, libphonenumbers.}
- \item \textbf{Triplinks (Social Network for lone business travellers)}
-    \\ TripLinks connects lone travellers with other travellers and locals. Share dinner, a coffee or a run after a work.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Datatables.}
+ \item \textbf{Swapaloop (Bartering service mobile app)}
+    \\ Users can post their services, explore others services and swap those.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
+ \item \textbf{Bannda (Social Networking App)}
+    \\ Users can connect to others based on their preferences.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, XMPP.}
+ \item \textbf{JetHunt (Jet Charter Services)}
+    \\ JetHunt is a web and App based platform through which a flyer can book One Way Journey or Book Individual Seats on a Luxurious business Jet.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
+ \item \textbf{SmartDutyFree (Shop DutyFree Products)}
+    \\ Facilitates the users to search DutyFree Products and shops by airport in multiple languages.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
+% \item \textbf{Triplinks (Social Network for lone business travellers)}
+%    \\ TripLinks connects lone travellers with other travellers and locals. Share dinner, a coffee or a run after a work.
+%    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Datatables.}
  \item \textbf{SplitKart (Payment Split System)}
     \\ Get restaurant deals, plan outing and split bills among friends, family and colleagues.
     \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, Datatables.}
@@ -104,12 +99,6 @@ to make innovations with my talented skills.
     \\ Students can play apps and complete assignments.
     \\ Teachers and parents can assign assignments, track performance of students.
     \\ \textit{Technology used : Python2.7, Django1.6, Django-Rest-Framework, MySQL, OAuth2.}
- \item \textbf{EMEND (e-learning app for CAT preparations)}
-    \\ Manage CAT Practice Questions. Integration with UPVGO. APIs for GamePlay and Reports.
-    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL.}
- \item \textbf{Budgle (Expense Tracker)}
-    \\ Track expenses and share with friends.
-    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, OAuth2.}
  \item \textbf{Workflow (Office Management System)}
     \\ Manage employees, Leaves, Attendance and Time-Sheet. Manage testing devices i.e. Mobile, tablet.
     \\ \textit{Technology used : Python2.7, Django1.4, Django-Rest-Framework, MySQL, LDAP.}
