Add Veris and triplinks projects.

--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -82,12 +82,15 @@ to make innovations with my talented skills.
  \item \textbf{JetHunt (Jet Charter Services)}
     \\ JetHunt is a web and App based platform through which a flyer can book One Way Journey or Book Individual Seats on a Luxurious business Jet.
     \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
+ \item \textbf{Veris (Visitor Management System)}
+    \\ Facilitates the users to setup meetings and relay information to the Visitor Management System for Check-ins, all in a completely secured and hassle free environment.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Django-MPTT, Django-storages, libphonenumbers.}
  \item \textbf{SmartDutyFree (Shop DutyFree Products)}
     \\ Facilitates the users to search DutyFree Products and shops by airport in multiple languages.
     \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
-% \item \textbf{Triplinks (Social Network for lone business travellers)}
-%    \\ TripLinks connects lone travellers with other travellers and locals. Share dinner, a coffee or a run after a work.
-%    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Datatables.}
+ \item \textbf{Triplinks (Social Network for lone business travellers)}
+    \\ TripLinks connects lone travellers with other travellers and locals. Share dinner, a coffee or a run after a work.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Datatables.}
  \item \textbf{SplitKart (Payment Split System)}
     \\ Get restaurant deals, plan outing and split bills among friends, family and colleagues.
     \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, Datatables.}
