Update project technologies.

--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -75,36 +75,36 @@ to make innovations with my talented skills.
 \begin{itemize}
  \item \textbf{Swapaloop (Bartering service mobile app)}
     \\ Users can post their services, explore others services and swap those.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
- \item \textbf{Bannda (Social Networking App)}
-    \\ Users can connect to others based on their preferences.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, XMPP.}
+    \\ \textit{Technology used : Python3.5, Django1.10, Django-Rest-Framework, PostgreSQL, Celery, XMPP.}
+% \item \textbf{Bannda (Social Networking App)}
+%    \\ Users can connect to others based on their preferences.
+%    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, XMPP.}
  \item \textbf{JetHunt (Jet Charter Services)}
     \\ JetHunt is a web and App based platform through which a flyer can book One Way Journey or Book Individual Seats on a Luxurious business Jet.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
- \item \textbf{Veris (Visitor Management System)}
-    \\ Facilitates the users to setup meetings and relay information to the Visitor Management System for Check-ins, all in a completely secured and hassle free environment.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Django-MPTT, Django-storages, libphonenumbers.}
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Celery.}
  \item \textbf{SmartDutyFree (Shop DutyFree Products)}
     \\ Facilitates the users to search DutyFree Products and shops by airport in multiple languages.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL.}
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, jQuery, Datatables.}
+ \item \textbf{Veris (Visitor Management System)}
+    \\ Facilitates the users to setup meetings and relay information to the Visitor Management System for Check-ins, all in a completely secured and hassle free environment.
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Django-MPTT, Celery, Django-storages, libphonenumbers.}
  \item \textbf{Triplinks (Social Network for lone business travellers)}
     \\ TripLinks connects lone travellers with other travellers and locals. Share dinner, a coffee or a run after a work.
-    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Datatables.}
+    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, jQuery, Datatables.}
  \item \textbf{SplitKart (Payment Split System)}
     \\ Get restaurant deals, plan outing and split bills among friends, family and colleagues.
-    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, Datatables.}
+    \\ \textit{Technology used : Python3.4, Django1.7, Django-Rest-Framework, PostgreSQL, jQuery, Datatables.}
  \item \textbf{NOC (Network Operations Center)}
     \\ Manage Network Devices, GIS Inventory and Device Services Status.
     \\ Track performance of devices. Raise alarms for bad status of device services.
-    \\ \textit{Technology Used : Python2.7, Django-1.6, MySQL, South, Django-MPTT, Celery, jQuery, Highcharts, Datatables.}
+    \\ \textit{Technology Used : Python2.7, Django-1.6, MySQL, South, Django-Rest-Framework, Django-MPTT, Celery, jQuery, Highcharts, Datatables.}
  \item \textbf{UPVGO (e-learning platform)}
     \\ Students can play apps and complete assignments.
     \\ Teachers and parents can assign assignments, track performance of students.
-    \\ \textit{Technology used : Python2.7, Django1.6, Django-Rest-Framework, MySQL, OAuth2.}
+    \\ \textit{Technology used : Python2.7, Django1.6, MySQL, South, Django-Rest-Framework, OAuth2.}
  \item \textbf{Workflow (Office Management System)}
     \\ Manage employees, Leaves, Attendance and Time-Sheet. Manage testing devices i.e. Mobile, tablet.
-    \\ \textit{Technology used : Python2.7, Django1.4, Django-Rest-Framework, MySQL, LDAP.}
+    \\ \textit{Technology used : Python2.7, Django1.4, MySQL, LDAP, jQuery.}
 \end{itemize}
 
 
