--- a/CV-Resume.tex
+++ b/CV-Resume.tex
@@ -35,7 +35,7 @@ Contact No.       &:& +91-9971919916 \\
 
 \section*{Objective}
 Accelerate my pace towards the growth of the organization by riding on my strength and
-to make innovations with my talented skills.
+to make innovations with my skills.
 
 \section*{Achivements}
 
@@ -74,13 +74,13 @@ to make innovations with my talented skills.
 \section*{Work Experience [Finoit, Aug 2012 to Present]}
 \begin{itemize}
  \item \textbf{Swapaloop (Bartering service mobile app)}
-    \\ Users can post their services, explore others services and swap those.
+    \\ Users can post their services, explore others services and swap them.
     \\ \textit{Technology used : Python3.5, Django1.10, Django-Rest-Framework, PostgreSQL, Celery, XMPP.}
 % \item \textbf{Bannda (Social Networking App)}
 %    \\ Users can connect to others based on their preferences.
 %    \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, XMPP.}
  \item \textbf{JetHunt (Jet Charter Services)}
-    \\ JetHunt is a web and App based platform through which a flyer can book One Way Journey or Book Individual Seats on a Luxurious business Jet.
+    \\ JetHunt is a web and Mobile App based platform through which a flyer can book One Way Journey or Book Individual Seats on a Luxurious business Jet.
     \\ \textit{Technology used : Python3.4, Django1.8, Django-Rest-Framework, PostgreSQL, Celery.}
  \item \textbf{SmartDutyFree (Shop DutyFree Products)}
     \\ Facilitates the users to search DutyFree Products and shops by airport in multiple languages.
@@ -107,6 +107,19 @@ to make innovations with my talented skills.
     \\ \textit{Technology used : Python2.7, Django1.4, MySQL, LDAP, jQuery.}
 \end{itemize}
 
+\section*{Educational Qualification}
+\begin{tabular}{l l c }
+\textbf{Degree} & \textbf{University / Institute} & \textbf{Year}\\[0.2cm]
+%& & \\
+B.Tech. & The LNM Institute of Information Technology, Jaipur & 2012\\[0.2cm]
+ %      &  &    &   \\
+%& & & \\
+Senior Secondary Examination & Maa Bharati Vidhya Bhavan, Kota & 2007\\[0.2cm]
+% & & & \\
+%& & & \\
+Secondary School Examination & Vivek Vardhani Secondary School, Anta & 2005\\
+ & & & \\
+\end{tabular}
 
 \section*{Declaration}
 I hereby declare that the above mentioned information is correct up to
@@ -114,6 +127,9 @@ my knowledge and I bear the responsibility for the credibility of the particular
 \begin{flushright}
  Anoop Kumar Malav
 \end{flushright}
+
+\vfill
+
 \begin{center}
 
 Last Updated : \today
